fix z-index

--- a/src/less/res.less
+++ b/src/less/res.less
@@ -204,6 +204,7 @@
 .res-navbody .res-subject-wrapper{
     width: 90%;
     float: left;
+     z-index: 999;
 }
 .res-navbody .res-more {
   cursor: pointer;
@@ -221,9 +222,11 @@
 }
 .res-navbody  .res-material-version{
     clear: both;
+     z-index: 999;
 }
 .res-navbody .res-content-footer{
     position: relative;
+    z-index: 0;
 }
 .res-navbody .res-content-footer img{
     position: absolute;
@@ -443,9 +446,8 @@
 .prepare-fixed{
     position: fixed;
     bottom: 350px;
-    right: 10px;
+    right: 5px;
     cursor: pointer;
-    border-radius: 5px;
 }
 .prepare-fixed:hover .prepare-ctrls{
     visibility: visible;   
@@ -460,6 +462,7 @@
     background: #41C9A9;
     padding: 5px;
     position: relative;
+    border-radius: 3px;
 }
 .prepare-fixed  .prepare-ctrls{
     float: left;
@@ -469,6 +472,7 @@
     visibility: hidden;
     background: #41C9A9;
     padding: 5px;
+    border-radius: 3px;
 }
 .prepare-fixed .shop-count{
     position: absolute;
